Add bot nickname feature and enhance AI message handling; optimize class notifications and cleanup tasks